<resources>
    <string name="app_name">Trab1Solved</string>
    <string name="reset">Reset</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="line">Line</string>
    <string name="rect">Rect</string>
    <string name="pixel">Pixel</string>
    <string name="circle">Circle</string>
    <string name="file_not_found">Could not find any saved data</string>
</resources>
