<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/load"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/loadButton"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/drawingType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/line"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton">

        <RadioButton
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line" />

        <RadioButton
            android:id="@+id/rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rect" />

        <RadioButton
            android:id="@+id/pixel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pixel" />

        <RadioButton
            android:id="@+id/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle" />
    </RadioGroup>

    <edu.isel.poo.trab1solved.view.DesignView
        android:id="@+id/designView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawingType" />
</androidx.constraintlayout.widget.ConstraintLayout>